assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Open+Sans&display=swap');
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: "Libre Baskerville", "Open Sans", serif;
    font-weight: 400;
    font-size: 1rem;
    color: #272635; 
    text-align: center;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 100%;
    background: url('../images/rocky_mountain.jpg') no-repeat center center fixed;
    background-size: cover;  
    height: fit-content;
    
    
   
}

header {
    background-color: #2c5530;
    color: #F2F2F2;
    max-height: 300px;
    grid-area: header;
    text-align: center;
    padding: 30px;
    font-size: 2.5rem;
    letter-spacing: 2px;
}

.quizInfo {
    font-size: 1rem;
    float: right;
    padding: 10px;
    display: flex;
    align-items: baseline;
    background-color: #0090C1;
    margin: 10px;
}


/*To hold all quiz elements and to create a grid display*/
#quizContainer {
    padding-top: 40px ;
    display: grid;
    max-width: 100%;
    grid-template-columns: 1fr 3fr 1fr;
    border-radius: 20px;
    text-align: center;
    grid-template-areas: "header header header"
                         ". . . "
                         ". quizCard . "
                         ". . . "
                        
}
/* Main card to display quiz informaiton */
#quizCard {
    
    grid-area: quizCard;
    min-height: 70%;
    max-width: 90%;
    background-color: #d1211e;
    color: #FFFDFE;
    text-align: center;
    padding: 10px;
    margin: 10px;
  
}

#quizInfo {
    display: flex;
    justify-content: center;
    align-items: center;
}


#question {
   
    font-size: 1.5rem;
    text-decoration: solid;
}

#multiChoice {
 
    text-align: left;
 
    list-style-type: none;
}
 

li {
    padding: 15px;
    margin: 5px;
}

#startQuiz {
    padding: 15px;
    background-color: #2c5530 ;
    color: #FFFDFE;
    border: #FFFDFE 2px;
    cursor: pointer;
    text-align: center;
    width: 50%;
    vertical-align:center;
    margin-top:10px;
    margin-bottom:10px;
    text-transform: uppercase;
   
}

#startQuiz:hover {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
}

#nextQuestion {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
    padding: 20px;
    text-align: center;
    margin-top: 10px;
    margin: auto;
    margin-bottom: 30px;
    text-transform: uppercase;

}

#nextQuestion:hover {
    cursor: pointer;
    background-color: #094774;
    color: #FFFDFE;
}

#finish {
    padding: 15px;
    background-color: #2c5530 ;
    color: #FFFDFE;
    border: #FFFDFE 2px;
    cursor: pointer;
    padding: 20px;
    text-align: center;
    margin-top: 10px;
    margin: auto;
    margin-bottom: 30px;
    text-transform: uppercase;  
}

#finish:hover {
    cursor: pointer;
    background-color: #0E2C42;
    color: #FFFDFE;
}

p {
    padding: 15px;
    margin: 15px;
}

ul #questionCounter {
    text-align: center;
    padding: 20px;
    margin: 15px;
    align-self: baseline;
    letter-spacing: 4px;
    font-weight: bold ;
}

h1 {
    font-size: 30px;
}

